NIFI-11218 Upgrade core dependencies (#30)
* NIFI-11218 Upgrade core dependencies
* Includes code changes to support migrating maven-dependency from 2.x to 3.x
* Bump next target version to 1.5.0
* Bump minimum maven version to 3.6.3